# verifier

./: .gitignore  AGENTS.md  CANDIDATES.md  CLAUDE.md  LICENSE  NOTICE  PROVENANCE.md  README.md  VERIFIER_TYPED_INPUT_PROVENANCE_GAP.md  adapters.py  cli.py  compiler.py  mcp_server.py  models.py  pyproject.toml  runner.py  verifier.py
examples/: stale-standing-denied.json  stale-standing-denied.verdict.json
tests/: test_adapters.py  test_advisory.py  test_attributes.py  test_claim_state.py  test_cli.py  test_dimensions.py  test_examples.py  test_golden.py  test_invariants.py  test_mcp.py  test_parity.py  test_practical.py  test_properties.py  test_runner.py  test_schema.py  test_scope_verifier.py  test_synthetic.py
tests/fixtures/: allowed.json  denied.json  invalid.json
tests/fixtures/synthetic/llm_claim_promotion/: advisory_llm_advisory_note.json  allowed_durable_with_human_review.json  denied_llm_attempts_durable.json  denied_llm_durable_with_receipt.json
tests/fixtures/synthetic/nq_suppression_gate/: allowed_clean_suppression.json  denied_duration_exceeds_window.json  denied_no_maintenance_window.json  denied_witness_cannot_testify.json
tests/fixtures/synthetic/release_merge_gate/: allowed_clean_release.json  denied_dirty_tree.json  denied_failing_tests.json  denied_multiple_gates_fail.json
tests/fixtures/synthetic/standing_grant_check/: advisory_non_actionable.json  allowed_edit_candidate.json  (+2 more)
tests/golden/: fact_standing_grant.json  proposal_deploy.json  verdict_allowed.json  verdict_denied_missing_fact.json  verdict_invalid_input.json
