[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z3-verifier"
version = "0.1.0"
description = "Formal admissibility verifier sidecar using Z3"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
