[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z3-verifier"
version = "0.1.0"
description = "Formal admissibility verifier sidecar using Z3"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
verifier-check = "cli:main"
verifier-mcp = "mcp_server:main"

[tool.hatch.build.targets.wheel]
include = [
    "models.py",
    "compiler.py",
    "verifier.py",
    "adapters.py",
    "runner.py",
    "cli.py",
    "mcp_server.py",
]

[tool.hatch.build.targets.wheel.sources]
"models.py" = "models.py"
"compiler.py" = "compiler.py"
"verifier.py" = "verifier.py"
"adapters.py" = "adapters.py"
"runner.py" = "runner.py"
"cli.py" = "cli.py"
"mcp_server.py" = "mcp_server.py"
